--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
+    "dotenv": "^16.0.1",
+    "moralis": "^1.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.5",
     "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "web3uikit": "^0.1.150"
   },
   "devDependencies": {
     "eslint": "8.15.0",
