--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SERVER_URL="https://txjumxy1vf2b.usemoralis.com:2053/server"
-NEXT_PUBLIC_APP_ID="Kk8wcvZZkqGrMX01504UlPLUcEqZ44nIpqqc5KMI"
+NEXT_PUBLIC_SERVER_URL="https://awt9xw6lbtyx.usemoralis.com:2053/server"
+NEXT_PUBLIC_APP_ID="A3ncUXGK1M8NJj1cI9peyUf8hdfUvTg8GJEorXSz"
