--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.8",
+    "async": "^3.2.3",
     "dotenv": "^16.0.1",
     "moralis": "^1.7.0",
     "next": "12.1.6",
